--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "start:dev": "nodemon",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.15.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
@@ -21,7 +24,6 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.0.0",
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
     "@babel/plugin-proposal-decorators": "^7.6.0",
@@ -29,7 +31,16 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
+    "@nestjs/testing": "^7.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.20.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "husky": "4.3.8",
     "jest": "26.6.3",
+    "lint-staged": "10.5.3",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2"
@@ -42,5 +53,32 @@
     "rootDir": "src",
     "testRegex": ".spec.js$",
     "coverageDirectory": "../coverage"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "commitlint": {
+    "parserPreset": {
+      "parserOpts": {
+        "issuePrefixes": [
+          "DST-"
+        ]
+      }
+    },
+    "rules": {
+      "references-empty": [
+        2,
+        "never"
+      ]
+    }
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "eslint --fix",
+      "git add",
+      "eslint"
+    ]
   }
 }
